# huragan_core_recovered

./: .env.example  .gitignore  .ops_lock.json  Cargo.toml  DEPLOYMENT_2026-06-12.md  OPERATOR_STATE.md  OPERATOR_STATE.template.md  README.md  _obs_analyze.py  canary_series_2026-06-11.md  monitor_agent_report.json
docs/: bundler_funding_graph.md  fresh_forward_outcome_labeling.md  fresh_safety_insider_gate.md  fresh_shadow_gate.md  helius_sender_backend.md  helius_ws_diagnosis_2026-06-15.md  operator_handoff.md  rust_analytics_bins.md  sniper_follow_layer.md
scripts/: _cron_age_analysis.py  _cron_candidate_freshness.py  _cron_creator_patterns.py  _cron_dump_analysis.py  _cron_entry_report.py  _cron_fresh_analysis.py  _cron_inspect_signals.py  _cron_signal_report.py  analyze_profit_regularities.py  analyze_z3h_prelive_after_gate.py  backfill_gtfa_dataset.py  backtest_liquidity_impact_filter.py  backtest_z3_hybrid.py  backtest_z3h_v2_checkpoint_rules.py  build_historical_datasets.py  bundler_funding_backtest.py  bundler_score_calibration_report.py  canary_checkpoint.sh  deploy_to_new_server.sh  dust_cleaner_execute.js  dust_cleaner_plan.py  fresh_3500_analysis.py  fresh_3500_entry_gate.py  fresh_forward_outcome_labeler.py  fresh_shadow_gate_report.py  fresh_sniper_collector.py  fresh_sniper_shadow.py  gmgn_shadow_cron_proposal.md  gmgn_shadow_scanner.py  huragan_canary_arm.sh  huragan_ci_check.sh  huragan_monitor_agent.py  huragan_ops_lock.py  huragan_paper_rollback.sh  huragan_runtime_verify.sh  monitor_strategy.py  pumpportal_trade_stream_smoke.py  (+13 more)
src/: analytics.rs  (+24 more)
(+11 files in other folders)
