[package]
name = "huragan_core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "huragan_core"
path = "src/main.rs"

[[bin]]
name = "market_supervisor"
path = "src/bin/market_supervisor.rs"

[[bin]]
name = "amm_sell_preflight"
path = "src/bin/amm_sell_preflight.rs"


[[bin]]
name = "fresh_forward_labeler"
path = "src/bin/fresh_forward_labeler.rs"

[[bin]]
name = "fresh_shadow_gate"
path = "src/bin/fresh_shadow_gate.rs"

[[bin]]
name = "bundler_score_report"
path = "src/bin/bundler_score_report.rs"

[[bin]]
name = "fresh_safety_gate"
path = "src/bin/fresh_safety_gate.rs"

[dependencies]
bincode = "1"
base64 = "0.22"
anyhow = "1"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
ed25519-dalek = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-rs = "0.3"
solana-client = "2"
solana-sdk = "2"
spl-associated-token-account = "6"
spl-token = "7"
spl-token-2022 = "6"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
uuid = { version = "1", features = ["v4"] }
